# SciFi

SciFi/: CMakeLists.txt  scifi.cpp
SciFi/control/: run1.mac
SciFi/include/: ExG4ActionInitialization01.hh  ExG4DetectorConstruction01.hh  ExG4DetectorSD.hh  ExG4PrimaryGeneratorAction01.hh
SciFi/src/: ExG4ActionInitialization01.cpp  ExG4DetectorConstruction01.cpp  ExG4DetectorSD.cpp  ExG4PrimaryGeneratorAction01.cpp
